k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-worker
  template:
    metadata:
      labels:
        app: it-worker
    spec:
      containers:
      - name: it-worker
        image: rukiyemelek/it-appointments:v1
        command: ["python", "-m", "app.worker"]
