k8s/api.yaml
# k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-api
spec:
  replicas: 3  # 🔴 Slayt Madde 4: Ölçeklenebilirlik
  selector:
    matchLabels:
      app: it-api
  template:
    metadata:
      labels:
        app: it-api
    spec:
      containers:
      - name: it-api
        image: rukiyemelek/it-appointments:v1  # Senin imajın!
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: it-api-service
spec:
  selector:
    app: it-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
