k8s/ingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-ingress
  annotations:
    # Bu satır Nginx'in bu kuralı kullanmasını sağlar
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-api-service # Trafiği buraya yönlendir
            port:
              number: 80
